{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 41,
  "lineage": "b38f26cf-b054-ede8-5242-888394610356",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-19T06:39:57.100-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infonation/global/firewalls/gritfy-firewall-externalssh",
            "name": "gritfy-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infonation/global/networks/default",
            "priority": 1000,
            "project": "infonation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infonation/global/firewalls/gritfy-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-19T06:39:57.113-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infonation/global/firewalls/gritfy-webserver",
            "name": "gritfy-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/infonation/global/networks/default",
            "priority": 1000,
            "project": "infonation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infonation/global/firewalls/gritfy-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    }
  ]
}